go through chap7

--- a/Sources/Coherence/coherence_poly.tex
+++ b/Sources/Coherence/coherence_poly.tex
@@ -375,7 +375,8 @@ Coq formalization.
 
 Finally \fnamee is coherent.
 
-\begin{theorem}[Coherence of \fnamee] We have that
+\begin{theorem}[Coherence of \fnamee] \label{thm:coherence:fi}
+  We have that
   \begin{itemize}
   \item If $[[DD ; GG |- ee => A ]]$ then $[[DD ; GG |- ee ~= ee : A]]$.
   \item If $[[DD ; GG |- ee <= A ]]$ then $[[DD ; GG |- ee ~= ee : A]]$.
