--- a/Sources/Nested/typesystem.tex
+++ b/Sources/Nested/typesystem.tex
@@ -57,6 +57,7 @@ $[[ee : A]]$, singleton records $[[ {l = ee}]]$, and record selections $[[ee.l]]
 \end{figure}
 
 \paragraph{BCD-Style Subtyping.}
+
 The subtyping rules are essentially those of the BCD type
 system~\citep{Barendregt_1983}, extended with subtyping for singleton records.
 \Rref{S-top,S-rcd} for top types and record types are straightforward.
@@ -219,12 +220,15 @@ translating source contexts $[[GG]]$ to target contexts $[[gg]]$.
 
 \subsection{Explicit Coercions and Coercive Subtyping}
 
-The separate syntactic category for explicit coercions is a distinct
-difference from the prior works (in which they are regular terms). Our coercions
-are based on those of \citet{Henglein_1994}, and we add more forms due to our
-extra subtyping rules.
+The separate syntactic category for explicit coercions is a distinct difference
+from the prior works (in which they are regular terms). Our coercions are based
+on those of \citet{Henglein_1994}, and we add more forms due to our extra
+subtyping rules.
 Metavariable $[[c]]$ ranges over coercions.\footnote{Coercions $[[pp1]]$ and $[[pp2]]$ subsume the first and second projection of pairs, respectively.}
-Coercions express the conversion
+As a cognitive aid, we can mentally ``desugar'' coercions to
+regular terms, which might help understand the dynamic semantics of coercions. The correspondence
+between coercions and terms is shown in \cref{tab:coercion}.
+In essence, coercions express the conversion
 of a term from one type to another. Because of the addition of coercions, the
 grammar contains explicit coercion applications $[[c e]]$ as a term, and various
 unsaturated coercion applications as values. The use of explicit coercions is useful for the new semantic
@@ -233,6 +237,23 @@ The subtyping judgment in \cref{fig:subtype_decl} has the form $[[A <: B ~~> c]]
 subtyping derivation of $[[A <: B]]$ produces a coercion $[[c]]$ that converts
 terms of type $[[ |A| ]]$ to type $[[ |B| ]]$. Each subtyping rule has its own
 specific form of coercion.
+
+
+\begin{table}[t]
+  \centering
+\begin{tabular}{|l|l||l|l|}
+\hline
+Coercion & Term & Coercion & Term \\ \hline
+$[[id]]$         & $[[ \x . x]]$  & $[[ c1 o c2  ]]$    &  $[[  \x . c1 (c2 x) ]]$     \\ \hline
+$[[top]]$         & $[[ \x . unit ]]$  & $[[ c1 -> c2  ]]$    &  $[[  \f . \x . c2 (f (c1 x))  ]]$     \\ \hline
+$[[  pp1   ]]$         & $[[ \x . pp1 x    ]]$  & $[[ pp2  ]]$    &  $[[  \x . pp2 x  ]]$     \\ \hline
+$[[  < c1 , c2 >   ]]$         & $[[ \x . < c1 x, c2 x >    ]]$  & $[[ distArr  ]]$    &  $[[  \x . \y . < (pp1 x) y , (pp2 x) y > ]]$     \\ \hline
+$[[  topArr   ]]$         & $[[ \x . \ y . unit    ]]$  &  & \\ \hline
+\end{tabular}
+  \caption{Correspondence between coercions and terms}
+  \label{tab:coercion}
+\end{table}
+
 
 %The meaning of the different forms of coercions becomes clear in \tom{Section
 %  TODO} \jeremy{it's a paragraph, how to refer it?} which explains coercive
