--- a/Sources/Background.tex
+++ b/Sources/Background.tex
@@ -222,7 +222,7 @@ the well-formedness of intersection types (\rref{wf-and}). Now the expression
 $[[1 ,, 2]]$ is not typable because $[[nat]]$ and $[[nat]]$ are not disjoint
 (they have a common supertype $[[nat]]$). To ensure that subtyping produces
 unique coercions, they also employ the notion of \textit{ordinary types}~\citep{Davies_2000}---those that are not intersection types---and
-use the judgment ``$[[ A ord ]]$'' in \rref{s-andl, s-andr}. Ordinary types and
+use the judgment ``$[[ A ord ]]$'' in \rref{Si-andL,Si-andR}. Ordinary types and
 disjointness are sufficient to ensure a coherent semantics of a type system
 without $[[Top]]$.
 
